# 20181025-strongly-typed-martini

./: .gitignore  Main.idr  Makefile  README.md  WORKSHOP.md  stack.yaml  strongly-typed-martini.cabal
docs/: slides.html
public/: .gitignore
src/haskell/: 01-intro.md  Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  Exercise5.hs  Exercise6.hs  Main  Main.hs  Solution.hs
src/idris/: Main.idr
