cabal-version: >=1.10
name: strongly-typed-martini
version: 0.1.0.0
license: Apache
license-file: LICENSE
author: janschultecom
homepage: https://github.com/janschultecom/20181025-strongly-typed-martini
build-type: Simple
extra-source-files:
    README.md

executable strongly-typed-martini
    main-is: Main.hs
    hs-source-dirs: src/haskell
    default-language: Haskell2010
    ghc-options: -pgmL markdown-unlit
    build-depends:
        base,
        containers -any,
        markdown-unlit
